--- a/Index.html
+++ b/Index.html
@@ -1,10 +1,7 @@
 <!doctype html>
 <html>
-  <head>
-    <meta http-equiv="refresh" content="0;url=https://script.google.com/macros/s/AKfycbwC51_o6gDgYOkEphZvWplJslJ8Y6jAj4UuNTMhA4LtOXl4HD3ALNRr6KRWYa7GWvB_dQ/exec">
-    <title>Redirecting…</title>
-  </head>
-  <body>
-    <p>Redirecting to portfolio… <a href="https://script.google.com/macros/s/AKfycbwC51_o6gDgYOkEphZvWplJslJ8Y6jAj4UuNTMhA4LtOXl4HD3ALNRr6KRWYa7GWvB_dQ/exec">Open</a></p>
+  <body style="margin:0;height:100vh">
+    <iframe src="https://script.google.com/macros/s/AKfycbwC51_o6gDgYOkEphZvWplJslJ8Y6jAj4UuNTMhA4LtOXl4HD3ALNRr6KRWYa7GWvB_dQ/exec"
+            style="width:100%;height:100%;border:0"></iframe>
   </body>
 </html>
