--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,18 @@
 <!doctype html>
-<html>
-  <body style="margin:0;height:100vh">
-    <iframe src="https://script.google.com/macros/s/AKfycbwC51_o6gDgYOkEphZvWplJslJ8Y6jAj4UuNTMhA4LtOXl4HD3ALNRr6KRWYa7GWvB_dQ/exec"
-            style="width:100%;height:100%;border:0"></iframe>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Jerwin Cruspero • Portfolio</title>
+  <style>
+    html,body {height:100%;margin:0}
+    iframe {width:100%;height:100vh;border:0;display:block}
+  </style>
+</head>
+<body>
+  <iframe
+    src="https://script.google.com/macros/s/AKfycbwC51_o6gDgYOkEphZvWplJslJ8Y6jAj4UuNTMhA4LtOXl4HD3ALNRr6KRWYa7GWvB_dQ/exec"
+    title="Jerwin Cruspero Portfolio">
+  </iframe>
+</body>
 </html>
